--- a/x.html
+++ b/x.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="y.css">
+<script type="text/javascript" src="pic.js">
+</script>
 </head>
 <body>
 <header>
@@ -11,31 +13,36 @@
 </header>
 
 <nav>
-  <a href="https://www.w3schools.com/html/html5_syntax.asp" target="_self">Link</a>
-  <a href="https://www.w3schools.com/css/css_font.asp" target="_self">Link</a>
-  <a href="https://www.w3schools.com/html/html_colors.asp" target="_self">Link</a>
+   <a href="file:///C:/Users/Michele/Desktop/freecode/x.html" target="_self">Home</a>
+  <a href="file:///C:/Users/Michele/Desktop/freecode/chi_sono.html" target="_self">Who i am</a>
+  <a href="file:///C:/Users/Michele/Desktop/freecode/contatti.html" target="_self">Contacts</a>
 </nav>
-
-<article>
-	
-  <section>
-    <h2>Main Content</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-    <p>eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies</p>
-  </section>
-  <aside>
-    <h2>Side</h2>
-    <img src="https://www.w3schools.com/images/picture.jpg" alt="picture" width="460" height="345">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
-  </aside>
-
+<article class="ab">
+	<section class="ac">
+    	<img src="1.jpg" alt="" id="gallery"/><br/>
+    	<img src="back.png" alt="back" width="48" height="48" class="back" onClick="back()">
+    	<img src="next.png" alt="next" width="48" height="48" class="next" onClick="next()">
+	</section>
 </article>
-
-<footer>
+<article>
+	<section>
+    	<h2>Founders and coders</h2>
+    	<p>Hi i am michele from italy and i live in this country from 4 years. I studied many years ago a course as web developer but i didn't do a stage thanks a bad attention from the school and i didn't get a job as well, but my passion is coding and i would like to work in it company as soon as possible. I studied a little bit php but now javascript is the best one so i need to follow my passion as much as i can. Free code camp has been a key for a lot of people and i am very lucky to be candidate at this cohort.</p>
+    	<ul>
+    		<li><a href="https://github.com/michelericcio/website/edit/master/x.html">GitHub</a></li>
+        	<li><a href="https://www.freecodecamp.org/fcca72937f0-709d-4ff5-bf06-b466db70eb31">freeCodeCamp</a></li>
+        	<li><a href="https://www.codewars.com/users/michelericcio">Codewars</a></li>
+    	</ul>
+	</section>
+  		<aside>
+    		<h2 class="sider">Side</h2>
+    		<img src="https://www.w3schools.com/images/picture.jpg" alt="picture" width="460" height="345">
+    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+  		</aside>
+</article>
+<footer class="colorf">
 	<p class="designer">Powered by Michele Riccio</p>
   	<p class="piva">BEPPEGRILLO.IT 2018 - P.Iva: 02506570999</p>
 </footer>
-
 </body>
 </html>
