--- a/x.html
+++ b/x.html
@@ -30,9 +30,9 @@ function back(){
 </header>
 
 <nav>
-   <a href="file:///C:/Users/Michele/Desktop/freecode/x.html" target="_self">Home</a>
-  <a href="file:///C:/Users/Michele/Desktop/freecode/chi_sono.html" target="_self">Who i am</a>
-  <a href="file:///C:/Users/Michele/Desktop/freecode/contatti.html" target="_self">Contacts</a>
+   <a href="x.html" target="_self">Home</a>
+  <a href="chi_sono.html" target="_self">Who i am</a>
+  <a href="contatti.html" target="_self">Contacts</a>
 </nav>
 <article class="ab">
 	<section class="ac">
