--- a/x.html
+++ b/x.html
@@ -44,7 +44,7 @@ function back(){
 <article>
 	<section>
     	<h2>Founders and coders</h2>
-    	<p>Hi i am michele from italy and i live in this country from 4 years. I studied many years ago a course as web developer but i didn't do a stage thanks a bad attention from the school and i didn't get a job as well, but my passion is coding and i would like to work in it company as soon as possible. I studied a little bit php but now javascript is the best one so i need to follow my passion as much as i can. Free code camp has been a key for a lot of people and i am very lucky to be candidate at this cohort.</p>
+    	<p>Hi i am michele from italy and i live in this country from 4 years. I studied many years ago a course as web developer but i didn't do a stage thanks a bad attention from the school and i didn't get a job as well, but my passion is coding and i would like to work in it company as soon as possible. I studied a little bit php but now javascript is the best one so i need to follow my passion as much as i can.</p>
     	<ul>
     		<li><a href="https://github.com/michelericcio/website/edit/master/x.html">GitHub</a></li>
         	<li><a href="https://www.freecodecamp.org/fcca72937f0-709d-4ff5-bf06-b466db70eb31">freeCodeCamp</a></li>
